Add product NDC to medication model and fetch from OpenFDA
A new field `productNdc` has been introduced to the OpenCDXMedicationModel class. The code now fetches the product's National Drug Code (NDC) from the OpenFDA service and assigns it to the `productNdc` attribute. The protobuf definition has also been updated to reflect the change in medication model.